# open_rmf_demo

communications/: CMakeLists.txt  package.xml
communications/launch/client/: multi_turtlebot3_burger_world_ff.launch.xml  multi_turtlebot3_waffle_world_ff.launch.xml
communications/launch/server/: P1_burger_world_server.launch.xml  P1_waffle_world_server.launch.xml  P2_burger_world_server.launch.xml  P2_waffle_world_server.launch.xml  P3_burger_world_server.launch.xml  P3_waffle_world_server.launch.xml
core/: CMakeLists.txt  package.xml
core/launch/Prueba_1/: P1_robots_launch.py  P1_world_launch.py
core/launch/Prueba_2/: P2_robots_launch.py  P2_world_launch.py
core/launch/Prueba_3/: P3_robots_launch.py  P3_world_launch.py
interface_rmf/: CMakeLists.txt  package.xml
interface_rmf/adapters/: turtlebot3_burger_adapter.launch.xml  turtlebot3_waffle_adapter.launch.xml
interface_rmf/launch/: P1_conn_rmf.launch.xml  P1_disc_rmf.launch.xml  P2_rmf.launch.xml  P3_rmf.launch.xml  turtle_world.launch.xml
interface_rmf/maps/Prueba_1_conn/: Prueba_1_connect.building.yaml
interface_rmf/maps/Prueba_1_disc/: Prueba_1_disconnect.building.yaml
interface_rmf/maps/Prueba_2/: Prueba_2.building.yaml
interface_rmf/maps/Prueba_3/: Prueba_3.building.yaml
interface_rmf/maps/Prueba_3/nav_graphs/: 1.yaml  8.yaml
interface_rmf/maps/test/: test_map.building.yaml
interface_rmf/maps/turtle/: turtle_test.building.yaml
simulation/: CMakeLists.txt  package.xml
simulation/description/: robot.urdf.xacro
simulation/description/xacro/: gazebo_control.xacro  lidar.xacro  robot_core.xacro
simulation/launch/: multi_generic_nav2.launch.py  multi_husky_nav2_test_world.launch.py  multi_turtle_burger_nav2_test_world.launch.py  multi_turtle_nav2_turtle_world.launch.py  multi_turtle_waffle_nav2_test_world.launch.py  only_world.launch.py  simulation.launch.xml
simulation/maps/: Prueba_1.pgm  Prueba_1.yaml  Prueba_2.pgm  Prueba_2.yaml  Prueba_3.pgm  Prueba_3.yaml  test_map.pgm  test_map.yaml
simulation/models/husky/: model.sdf
simulation/models/turtlebot3_burger/: model.sdf
simulation/worlds/: Prueba_1.world  Prueba_2.world  Prueba_3.world  test_world.world
