<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interface_rmf</name>
  <version>2.1.8</version>
  <description>TODO: Package description</description>
  <maintainer email="mattias.prieto@ug.uchile.cl">legion-amtc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rmf_building_map_tools</depend>
  <!-- 
  <build_depend>eigen</build_depend>
  <build_depend>yaml-cpp</build_depend>
  -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
